fix-align

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,8 +151,23 @@ input {
     margin-right: 20px;
     white-space: pre-line;
 }
-.you-message-content {
+.you-message-content, .user-message-content {
     max-width: 50%;
+    flex-wrap: wrap;
+    min-width: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin:10px 0;
+    border-radius: 10px;
+}
+.you-message-content {
+    background: lightgreen;
+    border: 1px solid green;
+}
+.user-message-content {
+    background-color: lightblue;
+    border: 1px solid #6079d1;
 }
 .user-message {
     min-width: 100px;
@@ -164,12 +179,14 @@ input {
     justify-content: flex-start;
     min-width: 50px;
     width: 100%;
+    padding-left: 10px;
 }
 .you-message-nick {
     display: flex;
     justify-content: flex-end;
     min-width: 50px;
     width: 100%;
+    padding-right: 10px;
 }
 .user-message-text {
     display: flex;
